scripts/nullaway/annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8.txt
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	public Daemon hbthread = null; // Heartbeatsender thread
	              ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
	public Daemon commandsthread = null; // commands thread
	              ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:194: error: [NullAway] dereferenced expression sourceNode is @Nullable
			boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
			                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:194: error: [NullAway] dereferenced expression destinationNode is @Nullable
			boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
			                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:196: error: [NullAway] dereferenced expression destinationNode is @Nullable
			if(Node.now() >= destinationNode.getDownloadingTime() && NodesAlive){
			                                ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:233: error: [NullAway] dereferenced expression sourceNode is @Nullable
				boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
				                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:233: error: [NullAway] dereferenced expression destinationNode is @Nullable
				boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
				                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:239: error: [NullAway] dereferenced expression destinationNode is @Nullable
							&& (Node.now() > destinationNode.getDownloadingTime());
							                                ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:22: error: [NullAway] @NonNull static field namenode not initialized
	private static Namenode namenode;
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:23: error: [NullAway] @NonNull static field allDatanodes not initialized
	private static AllDatanode allDatanodes;
	                           ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:28: error: [NullAway] @NonNull static field traceList not initialized
	private static List<SimTrace> traceList;
	                              ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:200: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return toNamenode;
		^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:204: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return toDatanodes;
		^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:236: error: [NullAway] unboxing of a @Nullable value
					failTime = failureEvents.get(st.getIdBlock());
					                            ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:71: error: [NullAway] initializer method does not guarantee @NonNull field pendingReplications (line 38) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Namenode() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:104: error: [NullAway] dereferenced expression communicationthread is @Nullable
		communicationthread.start();
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:106: error: [NullAway] dereferenced expression hbthread is @Nullable
		hbthread.start();
		        ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:107: error: [NullAway] dereferenced expression replthread is @Nullable
		replthread.start();
		          ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:575: error: [NullAway] dereferenced expression blockinfo is @Nullable
		blockinfo.addDatanode(datanode);
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/DatanodesMap.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return map.get(id);
		^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/PendingReplicationBlocks.java:49: error: [NullAway] initializer method does not guarantee @NonNull fields pendingReplications (line 37), timedOutItems (line 38) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  PendingReplicationBlocks(long timeoutPeriod) {
  ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/PendingReplicationBlocks.java:56: error: [NullAway] initializer method does not guarantee @NonNull fields pendingReplications (line 37), timedOutItems (line 38) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  PendingReplicationBlocks() {
  ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/PendingReplicationBlocks.java:224: error: [NullAway] dereferenced expression timerThread is @Nullable
    timerThread.interrupt();
               ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/NodeKiller.java:15: error: [NullAway] enhanced-for expression failures is @Nullable
		for (Event e : failures) {
		               ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/SimFileGenerator.java:51: error: [NullAway] passing @Nullable parameter 'filename' where @NonNull is required
		File f = new File(filename);
		                  ^
    (see http://t.uber.com/nullaway )
../annotator/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/SimFileGenerator.java:104: error: [NullAway] enhanced-for expression failedNodes is @Nullable
			for (Integer id : failedNodes) {
			                  ^
    (see http://t.uber.com/nullaway )
26 errors
